[package]
name = "nanotime"
version = "0.1.1"
edition = "2021"
authors = ["Anthony Sgro"]
description = "A minimal, zero-dependency time utility crate for Rust CLI applications"
license = "MIT"
repository = "https://github.com/anthonysgro/nanotime"
keywords = ["time", "datetime", "clock", "cli", "nanosecond"]
categories = ["date-and-time", "command-line-interface"]
readme = "README.md"
exclude = ["tests/*.proptest-regressions"]

[dependencies]

[dev-dependencies]
proptest = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
